--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Mission-Web-MVC01">
+    <wb-module deploy-name="carpool">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="Mission-Web-MVC01"/>
-        <property name="java-output-path" value="/Mission-Web-MVC01/build/classes"/>
+        <property name="java-output-path" value="/carpool/build/classes"/>
+        <property name="context-root" value="carpool"/>
     </wb-module>
 </project-modules>
