--- a/WebContent/assets/css/index.css
+++ b/WebContent/assets/css/index.css
@@ -5,13 +5,17 @@ body {
 	padding: 0;
 	font-family: verdana, sans-serif;
 	font-size: 20px;
-	font-size: 20px;
 }
 
 a {
 	text-decoration: none;
 }
-
+header{
+	background-color:white;
+}
+section {
+	background-color:white;
+}
 section h3 {
 	font-size: 30px;
 }
@@ -27,4 +31,11 @@ input.btn {
 
 .L{
 	text-align: left;
+}
+.clear {
+	clear:both;
+}
+#container{
+	width:1000px;
+	text-align:center;
 }
